Add: timezone logic (#39)
* Add: timezone logic